# gmail-mcp

./: .gitignore  README.md  pyproject.toml
src/gmail_mcp/: auth.py  config.py  server.py
src/gmail_mcp/cal/: client.py
src/gmail_mcp/gmail/: client.py
